objects/Architecture_Decision__c.object
<CustomObject>
    <fields>
        <fullName>Architecture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architecture</label>
        <referenceTo>Architecture__c</referenceTo>
        <relationshipLabel>Architecture Decisions</relationshipLabel>
        <relationshipName>Architecture_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Architecture_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Journey</label>
        <referenceTo>Customer_Journey__c</referenceTo>
        <relationshipLabel>Architecture Decisions</relationshipLabel>
        <relationshipName>Architecture_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Architecture Decision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Architecture Decision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Architecture Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>